# todo

./: .gitignore  Dockerfile  README.md  dev_data.json  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
templates/: base.html  home.html
templates/account/: login.html  signup.html
templates/components/: auth.html  landing_page.html  navbar.html  tasks.html
templates/components/tasks/: form.html  list.html
todo/: forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
