[tool.poetry]
name = "todo"
version = "0.1.0"
description = "A To Do application using HTMX/Django"
authors = ["Nguyen Van Dan <nguyenvdan07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
psycopg2-binary = "^2.9.2"
django-allauth = "^0.46.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
